derive_builder/tests/compile-fail/crate_root.stderr
error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ not found in `empty::export::core::option`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this enum
  |
5 | use derive_builder::export::core::option::Option;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ not found in `empty::export::core::clone`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait
  |
5 | use derive_builder::export::core::clone::Clone;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ not found in `empty::export::core::result`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
  |
5 | use derive_builder::export::core::fmt::Result;
  |
5 | use derive_builder::export::core::io::Result;
  |
5 | use derive_builder::export::core::result::Result;
  |
5 | use derive_builder::export::core::thread::Result;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ not found in `empty::export::core::convert`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait
  |
5 | use derive_builder::export::core::convert::Into;
  |

error[E0433]: failed to resolve: could not find `UninitializedFieldError` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ not found in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
5 | use derive_builder::UninitializedFieldError;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ not found in `empty::export::core::default`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait
  |
5 | use derive_builder::export::core::default::Default;
  |

error[E0412]: cannot find type `UninitializedFieldError` in module `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ not found in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
5 | use derive_builder::UninitializedFieldError;
  |
